Diploma-Project-2023/diploma-project-back-end/k8s/authorization/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authorization
  labels:
    app: authorization
    spring-boot: "true"
  annotations:
    prometheus.io/path: "/actuator/prometheus"
    prometheus.io/port: "9100"
    prometheus.io/scrape: "true"
spec:
  selector:
    app: authorization
  type: ClusterIP
  ports:
    - name: http
      port: 9000
      targetPort: 9000
    - name: actuator
      port: 9100
      targetPort: 9100
